--- a/edge2-fog2/app.yaml
+++ b/edge2-fog2/app.yaml
@@ -20,6 +20,13 @@ spec:
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
+      initContainers:
+        - name: fix-perms-models
+          image: busybox:1.36
+          command: [ "sh","-c","mkdir -p /app/models && chown -R 1000:1000 /app/models && chmod -R ug+rwX /app/models" ]
+          volumeMounts:
+            - name: models
+              mountPath: /app/models
       containers:
         - name: app
           image: docker.io/mipeda150/fedgrid-edge:latest
