--- a/edge2-fog1/app.yaml
+++ b/edge2-fog1/app.yaml
@@ -22,6 +22,8 @@ spec:
       initContainers:
         - name: fix-perms-models
           image: busybox:1.36
+          securityContext:
+            runAsUser: 0
           command: [ "sh","-c","mkdir -p /app/models && chown -R 1000:1000 /app/models && chmod -R ug+rwX /app/models" ]
           volumeMounts:
             - name: models
