--- a/edge3-fog1/app.yaml
+++ b/edge3-fog1/app.yaml
@@ -21,7 +21,7 @@ spec:
         - name: fix-perms-models
           image: busybox:1.36
           securityContext:
-            runAsUser: 0   # ensure we can chown/chmod the mounted path
+            runAsUser: 0
           command:
             - sh
             - -c
