--- a/fog3/app.yaml
+++ b/fog3/app.yaml
@@ -10,6 +10,22 @@ spec:
       nodeSelector: { role: fog3 }
       imagePullSecrets: [ { name: regcred } ]
       securityContext: { runAsUser: 1000, runAsGroup: 1000, fsGroup: 1000 }
+      initContainers:
+        - name: fix-perms-models
+          image: busybox:1.36
+          securityContext:
+            runAsUser: 0
+          command:
+            - sh
+            - -c
+            - >
+              set -eux;
+              mkdir -p /app/models /app/models/outbox;
+              chown -R 1000:1000 /app/models /app/models/outbox || true;
+              chmod -R ug+rwX /app/models /app/models/outbox || true
+          volumeMounts:
+            - { name: models, mountPath: /app/models }
+            - { name: outbox, mountPath: /app/models/outbox }
       containers:
         - name: app
           image: docker.io/mipeda150/fedgrid-fog:latest
