--- a/edge3-fog1/app.yaml
+++ b/edge3-fog1/app.yaml
@@ -16,9 +16,8 @@ spec:
         logical-edge: edge3-fog1
       imagePullSecrets: [ { name: regcred } ]
       securityContext: { runAsUser: 1000, runAsGroup: 1000, fsGroup: 1000 }
-
       initContainers:
-        - name: fix-perms-models
+        - name: seed-input-file
           image: busybox:1.36
           securityContext:
             runAsUser: 0
@@ -26,13 +25,20 @@ spec:
             - sh
             - -c
             - >
-              mkdir -p /app/models &&
-              chown -R 1000:1000 /app/models &&
-              chmod -R ug+rwX /app/models
+              set -e;
+              if [ -d /mnt/input_data.csv ]; then rm -rf /mnt/input_data.csv; fi;
+              [ -f /mnt/input_data.csv ] || install -m 0644 -o 1000 -g 1000 /dev/null /mnt/input_data.csv
+          volumeMounts:
+            - name: input
+              mountPath: /mnt
+        - name: fix-perms-models
+          image: busybox:1.36
+          securityContext:
+            runAsUser: 0
+          command: [ "sh","-c","mkdir -p /app/models && chown -R 1000:1000 /app/models && chmod -R ug+rwX /app/models" ]
           volumeMounts:
             - name: models
               mountPath: /app/models
-
       containers:
         - name: app
           image: docker.io/mipeda150/fedgrid-edge:latest
