--- a/cloud/app.yaml
+++ b/cloud/app.yaml
@@ -17,7 +17,7 @@ spec:
         - name: regcred
       containers:
         - name: app
-          image: docker.io/mipeda150/fedgrid-cloud:latest
+          image: docker.io/mipeda150/fedgrid-cloud:v2025-09-05-1900
           ports:
             - containerPort: 8081
           envFrom:
