--- a/edge2-fog1/app.yaml
+++ b/edge2-fog1/app.yaml
@@ -44,7 +44,7 @@ spec:
               mountPath: /app/models
       containers:
         - name: app
-          image: docker.io/mipeda150/fedgrid-edge:latest
+          image: docker.io/mipeda150/fedgrid-edge:v2025-09-06-1400
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8081
