--- a/edge3-fog1/app.yaml
+++ b/edge3-fog1/app.yaml
@@ -41,7 +41,7 @@ spec:
               mountPath: /app/models
       containers:
         - name: app
-          image: docker.io/mipeda150/fedgrid-edge:latest
+          image: docker.io/mipeda150/fedgrid-edge:v2025-09-06-1400
           ports: [ { containerPort: 8081 } ]
           envFrom: [ { configMapRef: { name: edge3-fog1-env } } ]
           volumeMounts:
