--- a/cloud/agent.yaml
+++ b/cloud/agent.yaml
@@ -38,9 +38,9 @@ spec:
 
           resources:
             requests:
-              cpu: "100m"
+              cpu: "200m"
               memory: "128Mi"
             limits:
-              cpu: "500m"
+              cpu: "1"
               memory: "512Mi"
 
