--- a/fog1/agent-configs.yaml
+++ b/fog1/agent-configs.yaml
@@ -4,50 +4,41 @@ metadata:
   name: fog-agent-env
   namespace: fog1
 data:
-  # --- MQTT endpoints ---
-  # Primary (local) broker for the fog domain
+  # ---- Identity / logging ----
+  FOG_NAME: fog1
+  LOG_PREFIX: "[fog-agent][fog1]"
+
+  # ---- MQTT endpoints ----
   FOG_MQTT_HOST: mqtt.fog1.svc.cluster.local
   FOG_MQTT_PORT: "1883"
-
-  # Alias expected by shared libs
   MQTT_HOST: mqtt.fog1.svc.cluster.local
   MQTT_PORT: "1883"
 
-  # (Optional) Cloud broker if the agent bridges/listens upstream as well
   CLOUD_MQTT_HOST: mqtt.cloud.svc.cluster.local
   CLOUD_MQTT_PORT: "1883"
 
-  # --- AMQP endpoints (if your agent also talks to RabbitMQ) ---
-  FOG_RABBITMQ_HOST: rabbitmq.fog1.svc.cluster.local
-  CLOUD_RABBITMQ_HOST: rabbitmq.cloud.svc.cluster.local
+  # ---- Fog events (match what fog publishes today) ----
+  TOPIC_EDGE_MODEL_RECEIVED: fog/events/edge-model-received
+  TOPIC_AGGREGATION_COMPLETE: fog/events/aggregation-complete
+  TOPIC_CLOUD_MODEL_DOWNLINK: fog/events/cloud-model-downlink
 
-  # --- Topic wiring (fog scope) ---
-  # Incoming events (from edges → fog)
-  TOPIC_EDGE_MODEL_RECEIVED: fog1/events/edge-model-received
-  # Cloud → fog control/broadcast acknowledgements observed at fog
-  TOPIC_CLOUD_COMMAND_SEEN: fog1/events/cloud-command-seen
-  # Fog’s own model lifecycle events
-  TOPIC_FOG_MODEL_UPDATED: fog1/events/fog-model-updated
-  # Commands targeting this agent
-  TOPIC_AGENT_COMMANDS: fog1/agent/commands
-  # (Optional) publish when fog forwards model to cloud
-  TOPIC_FOG_MODEL_PUBLISHED: fog1/events/fog-model-published
+  # ---- Commands fog-agent publishes back to fog node ----
+  TOPIC_AGENT_COMMANDS: fog/agent/commands
 
-  # --- Policy/Bandit defaults (edges under this fog) ---
-  BANDIT_ARMS: edge1-fog1,edge2-fog1,edge3-fog1
+  # ---- Cloud → fog control (listen to your bridge topic) ----
+  TOPIC_CLOUD_TO_FOG_TARGETED: ""                  # leave empty until you move to targeted
+  TOPIC_CLOUD_TO_FOG_BROADCAST: cloud/fog/command  # what your cloud bridge already uses
+
+  # ---- Policy/Bandit defaults ----
+  # Use the same ID format as your fog logs (edgeX_fog1, not edgeX-fog1)
+  BANDIT_ARMS: edge1_fog1,edge2_fog1,edge3_fog1
   BANDIT_EPSILON: "0.1"
-
-  # --- Orchestration heuristics (if used) ---
   ORCH_DEFAULT_QUOTA: "0.3"
   ORCH_DEFAULT_PRESSURE: "0.4"
 
-  # --- Behavior toggles (align with your fog app flags) ---
+  # ---- Behavior toggles ----
   FOG_PURGE_AMQP_ON_BOOT: "true"
   FOG_PURGE_EDGE_MODELS_ON_BOOT: "true"
   FOG_PURGE_MQTT_RETAINED_ON_BOOT: "true"
   FOG_IGNORE_CLOUD_RETAINED_SECS: "10"
   FOG_MQTT_CLEAN_SESSION: "false"
-
-  # --- Logging ---
-  LOG_PREFIX: "[fog-agent][fog1]"
-
