updated all yamls

--- a/cloud/agent-configs.yaml
+++ b/cloud/agent-configs.yaml
@@ -18,7 +18,13 @@ data:
   TOPIC_AGENT_COMMANDS: cloud/agent/commands
 
   # Bandit / policy defaults
-  BANDIT_ARMS: fog1,fog2
+  BANDIT_ARMS: fog1,fog2,fog3
+  BANDIT_FORCE_EXPLORE_ROUNDS: "10"
+  BANDIT_SELECTION: "softmax"
+  BANDIT_SOFTMAX_TEMP: "0.2"
+  CLOUD_REWARD_BASE_WEIGHT: "0.4"
+  CLOUD_REWARD_SPIKE_WEIGHT: "0.6"
+
   BANDIT_EPSILON: "0.1"
   ORCH_DEFAULT_QUOTA: "0.2"
   ORCH_DEFAULT_PRESSURE: "0.3"
